# CAMP

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: README.md  sample_map.json
src/camp/: __init__.py  artifact.py  cli.py  core.py  crypto.py  io.py
tests/: test_roundtrip.py
